--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -1,189 +1,141 @@
 cv:
-  name: Albert Einstein
-  label: Scientist
-  email: einstein@example.com
-  location: Princeton, NJ
+  name: Woojin Shin
+  email: swjstar7@gm.gist.ac.kr
+  location: Gwangju, South Korea
   image: ""
-  summary: A German-born theoretical physicist, widely ranked among the greatest and most influential scientists of all time
+  summary: Undergraduate Student in Department of Mathematical Science / Double Major in Electrical Engineering and Computer Science (EECS)
 
   social_networks:
-    - network: X
-      username: AlbertEinstein
-    - network: GitHub
-      username: example
-    - network: LinkedIn
-      username: example
+    # - network: LinkedIn
+    #   username: yourusername
+    # - network: GitHub
+    #   username: yourusername
 
   address:
-    street: 2712 Broadway St
-    city: San Francisco
-    region: California
-    postalCode: CA 94115
-    countryCode: US
+    street: GIST
+    city: Gwangju
+    region:
+    postalCode:
+    countryCode: Republic of Korea
 
   sections:
     Education:
-      - institution: University of Zurich
-        location: Zurich, Switzerland
-        url: https://www.uzh.ch/
-        area: Physics
-        studyType: PhD
-        start_date: 1900
-        end_date: 1905
-        score: ""
-        courses: "Theory of Relativity"
+      - institution: Gwangju Institute of Science and Technology (GIST)
+        location: Gwangju, South Korea
+        area: Mathematical Science / EECS (Double Major)
+        studyType: Undergraduate
+        start_date: 2021-03
+        end_date: Present
+        score: "TGPA: 4.11/4.5 | Major: 4.06/4.5"
         highlights:
-          - Description 1.
-          - Description 2.
+          - Completed 7 Semesters
 
-      - institution: Eidgenössische Technische Hochschule
-        location: Zurich, Switzerland
-        area: Physics
-        studyType: Federal teaching diploma
-        start_date: 1896
-        end_date: 1900
+    Research Experience:
+      - company: ACSS Lab, KAIST
+        position: Research Intern
+        location: Daejeon, South Korea
+        start_date: 2025-06
+        end_date: 2025-08
+        summary: Advisor - Soojean Han
         highlights:
-          - Description 1.
-          - Description 2.
+          - "Modern control theory: Linear systems, LQR, MPC"
+          - ADMM-Based Distributed Model Predictive Control for Collision and Obstacle Avoidance
 
-    Experience:
-      - company: Institute for Advanced Study, Princeton University
-        position: Professor of Theoretical Physics
-        location: Princeton University, NJ
-        start_date: 1933
-        end_date: 1955
-        summary: Teaching at Palmer Physical Laboratory (now 302 Frist Campus Center). While not a professor at Princeton, I associated with the physics professors and continued to give lectures on campus.
+      - company: DCASL, GIST
+        position: Research Intern
+        location: Gwangju, South Korea
+        start_date: 2025-03
+        end_date: 2025-06
+        summary: Advisor - Hyosung Ahn
         highlights:
-          - Relativity
-          - Description 2.
+          - Global Rigidity of Graphs
 
-      - company: California Institute of Technology
-        position: Visiting Professor
-        location: Pasadena, California, US
-        start_date: 1933
-        end_date: 1933
+      - company: DCASL, GIST
+        position: Research Intern
+        location: Gwangju, South Korea
+        start_date: 2022-12
+        end_date: 2023-02
+        summary: Advisor - Hyosung Ahn
         highlights:
-          - Description 1.
-          - Description 2.
+          - Studying consensus algorithm of Multi-Agent Systems
 
-      - company: Kaiser Wilhelm Institute for Physics
-        position: Director
-        location: Berlin, Germany
-        start_date: 1917
-        end_date: 1933
-
-      - company: Karl-Ferdinand University
-        position: Professor of Theoretical Physics
-        location: Prague, Czechoslovakia
-        start_date: 1911
-        end_date: 1917
-
-      - company: University of Zurich
-        position: Associate Professor of Theoretical Physics
-        location: Zurich, Switzerland
-        start_date: 1909
-        end_date: 1911
-
-    Volunteer:
-      - company: People's Climate March
-        position: Lead Organizer
-        location: Zurich, Switzerland
-        start_date: 2014-04-01
-        end_date: 2015-07-01
-        summary: Lead organizer for the New York City branch of the People's Climate March, the largest climate march in history.
+    International Experience:
+      - company: University of California, Berkeley (UC Berkeley)
+        position: Exchange Student
+        location: CA, USA
+        start_date: 2023-06
+        end_date: 2023-08
+        summary: Summer session
         highlights:
-          - "Awarded 'Climate Hero' award by Greenpeace for my efforts organizing the march."
-          - "Men of the year 2014 by Time magazine"
+          - "Coursework: CS70 (Discrete Mathematics and Probability), STAT155 (Game Theory)"
 
-    Awards:
-      - title: Nobel Prize in Physics
-        authors:
-          - "Royal Swedish Academy of Sciences"
-        date: 1921-11-01
-        awarder: Royal Swedish Academy of Sciences
-        url: https://www.nobelprize.org/prizes/physics/1921/einstein/biographical/
-        summary: The Nobel Prizes are five separate prizes that, according to Alfred Nobel's will of 1895, are awarded to 'those who, during the preceding year, have conferred the greatest benefit to humankind.'
+    Teaching Experience:
+      - company: GIST
+        position: Teaching Assistant (MM3301 Topology I)
+        start_date: 2026-03
+        end_date: Present
+        summary: Incoming
 
-      - title: Max Planck Medal
-        authors:
-          - "German Physical Society"
-        date: 2029
-        awarder: German Physical Society
-        summary: Awarded for outstanding scientific achievement
+      - company: GIST
+        position: Teaching Assistant (MM2004 Intro to Linear Algebra and Applications I)
+        start_date: 2025-09
+        end_date: 2025-12
 
-    Publications:
-      - title: Zur Elektrodynamik bewegter Körper
-        authors:
-          - Albert Einstein
-        publisher: Annalen der Physik
-        releaseDate: 1905-06-30
-        url: https://en.wikisource.org/wiki/Translation:On_the_Electrodynamics_of_Moving_Bodies
-        summary: It concerned an interpretation of the Michelson–Morley experiment and the properties of light and time. Special relativity incorporates the principle that the speed of light is the same for all inertial observers regardless of the state of motion of the source.
-
-      - title: Über einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt
-        authors:
-          - Albert Einstein
-        publisher: Annalen der Physik
-        releaseDate: 1905-03-18
-        url: https://de.wikisource.org/wiki/Über_einen_die_Erzeugung_und_Verwandlung_des_Lichtes_betreffenden_heuristischen_Gesichtspunkt
-        summary: In the second paper, he applied the quantum theory to light to explain the photoelectric effect. In particular, he used the idea of light quanta (photons) to explain experimental results, but stressed the importance of the experimental results. The importance of his work on the photoelectric effect earned him the Nobel Prize in Physics in 1921.
-
-      - title: Die Grundlage der allgemeinen Relativitätstheorie
-        authors:
-          - Albert Einstein
-        publisher: Annalen der Physik
-        releaseDate: 1916-03-20
-        url: https://de.wikisource.org/wiki/Die_Grundlage_der_allgemeinen_Relativitätstheorie
-        summary: The publication of the theory of general relativity made him internationally famous. He was professor of physics at the universities of Zurich (1909–1911) and Prague (1911–1912), before he returned to ETH Zurich (1912–1914).
-
-    Skills:
-      - name: Physics
-        level: Master
-        icon: fa-solid fa-hashtag
-        keywords: "Quantum Mechanics, Quantum Computing, Quantum Information, Quantum Cryptography, Quantum Communication, Quantum Teleportation"
-
-    Languages:
-      - name: German
-        summary: "Native speaker"
-
-      - name: English
-        summary: "Fluent"
-
-    Interests:
-      - name: Physics
-        icon: fa-solid fa-tag
-        keywords: "Quantum Mechanics, Quantum Computing, Quantum Information, Quantum Cryptography, Quantum Communication, Quantum Teleportation"
-
-    Certificates:
-      - name: Machine Learning
-        date: 2018-01-01
-        issuer: Stanford University
-        icon: fa-solid fa-location-dot
-
-      - name: Quantum Computing
-        date: 2018-01-01
-        issuer: Stanford University
-        icon: fa-solid fa-tag
-
-      - name: Quantum Information
-        date: 2018-01-01
-        issuer: Stanford University
-        icon: fa-solid fa-envelope
+      - company: GIST
+        position: Teaching Assistant (CT4202 Visual Communication)
+        start_date: 2023-03
+        end_date: 2023-06
 
     Projects:
-      - name: Quantum Computing
-        summary: Quantum computing is the use of quantum-mechanical phenomena such as superposition and entanglement to perform computation. Computers that perform quantum computations are known as quantum computers.
+      - name: GIST-X
+        summary: DCASL, GIST
         highlights:
-          - Quantum Teleportation
-          - Quantum Cryptography
-        start_date: 2018-01-01
-        end_date: 2018-01-01
+          - CubeSat Development contest organized by Korea Aerospace Research Institute
+          - Assist in designing the power system and control
+        start_date: 2022-01
+        end_date: 2022-11
 
-    References:
-      - name: Professor John Doe
-        icon: fa-solid fa-laptop
-        reference: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam condimentum, diam quis convallis euismod, arcu mi ullamcorper lorem, a vestibulum nunc magna at sem. Sed in risus ac felis varius blandit.
+      - name: ME UP
+        summary: DCASL, GIST
+        highlights:
+          - Attitude Control of space flight object with Quaternion feedback control
+        start_date: 2022-05
+        end_date: 2022-11
 
-      - name: Professor Jane Smith
-        icon: fa-solid fa-thumbtack
-        reference: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam condimentum, diam quis convallis euismod, arcu mi ullamcorper lorem, a vestibulum nunc magna at sem. Sed in risus ac felis varius blandit.
+    Skills:
+      - name: Mathematics
+        icon: fa-solid fa-square-root-variable
+        keywords: "Real Analysis, Basic Topology, Measure and Probability Theory, Graph Theory"
+      
+      - name: Programming
+        icon: fa-solid fa-code
+        keywords: "Python, MATLAB, Simulink"
+
+      - name: Control & Optimization
+        icon: fa-solid fa-sliders
+        keywords: "PID, LQR, MPC, Convex Optimization, ADMM"
+
+      - name: Documentation
+        icon: fa-solid fa-file-lines
+        keywords: "LaTeX, Obsidian"
+
+    Languages:
+      - name: Korean
+        summary: Native
+
+      - name: English
+        summary: "Fluent (TOEFL: 106)"
+    
+    Scholarships:
+      - name: Academic Excellence Scholarship (GIST)
+        summary: Awarded for 5 semesters (Spring 2021, Fall 2021, Spring 2022, Spring 2023, Spring 2025)
+      
+      - name: Dean's List (College of Info & Computing)
+        summary: Awarded for 2 semesters (Spring 2025, Fall 2025)
+
+    Military Service:
+      - company: Republic of Korea Army (KATUSA)
+        position: Sergeant
+        start_date: 2023-09
+        end_date: 2025-03
+
