--- a/_config.yml
+++ b/_config.yml
@@ -93,7 +93,7 @@ bing_site_verification: # out your bing-site-verification ID (Bing Webmaster)
 
 blog_name: Study Notes # blog_name will be displayed in your blog page
 blog_description: Concepts & Paper Summaries
-permalink: /blog/:year/:title/
+permalink: /study/:year/:title/
 lsi: false # produce an index for related posts
 
 # Pagination
@@ -265,9 +265,9 @@ jekyll-archives:
   posts:
     enabled: [year, tags, categories] # enables year, tag and category archives (remove if you need to disable one of them).
     permalinks:
-      year: "/blog/:year/"
-      tags: "/blog/:type/:name/"
-      categories: "/blog/:type/:name/"
+      year: "/study/:year/"
+      tags: "/study/:type/:name/"
+      categories: "/study/:type/:name/"
   books:
     enabled: [year, tags, categories] # enables year, tag and category archives (remove if you need to disable one of them).
 
